force-app/main/default/objects/SIte_Visit__c/SIte_Visit__c.object-meta.xml
<CustomObject>
    <label>SIte Visit</label>
    <nameField>
        <label>SIte Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIte Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>