force-app/main/default/objects/SIte_Visit__c/fields/Marble_Area_in_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Marble_Area_in_Sq_Ft__c</fullName>
    <inlineHelpText>Area in Sq. Ft</inlineHelpText>
    <label>Marble Area in Sq. Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>