force-app/main/default/objects/SIte_Visit__c/fields/NoOfFloors__c.field-meta.xml
<CustomField>
    <fullName>NoOfFloors__c</fullName>
    <label>No. of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>