force-app/main/default/objects/SIte_Visit__c/fields/Tile_Area__c.field-meta.xml
<CustomField>
    <fullName>Tile_Area__c</fullName>
    <inlineHelpText>Enter Area</inlineHelpText>
    <label>Tile Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>